--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,30 +1,32 @@
-
-name: Generate Snake
+name: Generate dark linear Snake
 
 on:
-  schedule:
-    - cron: "0 */12 * * *"
   workflow_dispatch:
+  schedule:
+    - cron: '0 6 * * *'   # daily at 06:00 UTC (optional)
   push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Generate Snake Animation
+      - name: Generate dark snake SVG (Platane/snk)
         uses: Platane/snk@v3
         with:
+          # required: username to read the contribution graph for
           github_user_name: devkcsn
+          # define one or several outputs, each can include query options
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/snake-dark.svg?palette=github-dark&color_snake=00E5FF&color_dots=0f172a,0f172a,0f172a,0f172a
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push Snake
+      - name: Publish `dist` to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
