--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,32 +1,28 @@
-name: Generate dark linear Snake
+name: Generate Snake
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '0 6 * * *'   # daily at 06:00 UTC (optional)
+    - cron: "0 */12 * * *"  # Runs every 12 hours
+  workflow_dispatch:  # Allows manual trigger
   push:
     branches:
       - main
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Generate dark snake SVG (Platane/snk)
-        uses: Platane/snk@v3
+      - name: Generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          # required: username to read the contribution graph for
           github_user_name: devkcsn
-          # define one or several outputs, each can include query options
           outputs: |
-            dist/snake-dark.svg?palette=github-dark&color_snake=00E5FF&color_dots=0f172a,0f172a,0f172a,0f172a
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg?palette=github-light
 
-      - name: Publish `dist` to output branch
+      - name: Push snake.svg to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
