--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,14 +2,16 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Runs every 12 hours
-  workflow_dispatch:  # Allows manual trigger
+    - cron: "0 */12 * * *"
+  workflow_dispatch:
   push:
     branches:
       - main
 
 jobs:
   generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
@@ -19,9 +21,9 @@ jobs:
         with:
           github_user_name: devkcsn
           outputs: |
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake.svg?palette=github-light
-
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=white&color_dots=#161b22,#0e4429,#006d32,#26a641,#39d353
+            dist/github-contribution-grid-snake.svg?palette=github-light&color_snake=white&color_dots=#ebedf0,#9be9a8,#40c463,#30a14e,#216e39
+          
       - name: Push snake.svg to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
