--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,30 +1,41 @@
-name: Generate Snake
+name: Generate Snake Game
 
 on:
+  # Schedule: Runs at midnight UTC every day
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "0 0 * * *" 
+  
+  # Manual Trigger: Allows for testing and immediate updates
   workflow_dispatch:
+  
+  # Trigger on Push: Updates when the config itself is changed
   push:
     branches:
-      - main
+    - main
 
 jobs:
   generate:
-    permissions:
-      contents: write
+    permissions: 
+      contents: write # Critical for pushing the generated SVG back
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-
+    timeout-minutes: 5
+    
     steps:
-      - name: Generate snake.svg
-        uses: Platane/snk/svg-only@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Generate Snake (Dual Palette)
+        uses: Platane/snk@v3
         with:
-          github_user_name: devkcsn
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=white&color_dots=#161b22,#0e4429,#006d32,#26a641,#39d353
-            dist/github-contribution-grid-snake.svg?palette=github-light&color_snake=white&color_dots=#ebedf0,#9be9a8,#40c463,#30a14e,#216e39
-          
-      - name: Push snake.svg to output branch
+            # Light Mode Palette: White bg, moving to black for high activity
+            dist/github-snake.svg?color_snake=#333333&color_dots=#ffffff,#e8e8e8,#c4c4c4,#8a8a8a,#000000
+            
+            # Dark Mode Palette: GitHub Dark Dimmed bg (#161b22), moving to white
+            dist/github-snake-dark.svg?color_snake=#ffffff&color_dots=#161b22,#30363d,#484f58,#6e7681,#f0f6fc
+
+      - name: Deploy to Output Branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
