--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,37 +1,47 @@
-name: Generate Snake Animation
+name: Generate Snake
 
+# Controls when the action will run
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Runs every 12 hours
-  workflow_dispatch:  # Allows manual trigger
+    # Runs every 12 hours
+    - cron: "0 */12 * * *"
+  
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
+  # Run on every push to main branch
   push:
     branches:
       - main
 
+# A workflow run is made up of one or more jobs
 jobs:
-  generate:
+  build:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-    
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-      
-      - name: Generate Snake Animation
-        uses: Platane/snk/svg-only@v3
+      # Checks repo under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      # Generates the snake animation with grey gradient
+      - uses: Platane/snk@v3
+        id: snake-gif
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: devkcsn
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Deploy to Output Branch
-        uses: crazy-max/ghaction-github-pages@v3
+            dist/snake-grey-dark.svg?palette=github-dark&color_snake=#2d2d2d,#404040,#525252,#666666,#7a7a7a,#8f8f8f,#a3a3a3,#b8b8b8,#cccccc,#e0e0e0,#f5f5f5,#ffffff
+
+      - name: Show build status
+        run: git status
+
+      # Push the changes to output branch
+      - name: Push snake animation to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
-          commit_message: "Update snake animation"
+          commit_message: Update snake animations
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
